# TensorRTSP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc
modules/: API.h  calibrator.cpp  class_detector.h  class_yolo_detector.hpp  yolo.cpp
src/: main.cpp  videostreamer.h
src/Common/: Singleton.h
src/Model/: streamingmodel.cpp  streamingmodel.h  streamingprovider.cpp  streamingprovider.h
src/Network/: socketeventhandler.cpp  socketeventhandler.h
src/VideoStreamer/: detectionmanager.h  videostreamer.cpp  videostreamer.h
src/qml/: main.qml
